[package]
name = "gh_webhook_notif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "^0.17"
tokio = {version = "1.21", features = ["rt-multi-thread"] }
serenity = "^0.11"
chrono = "^0.4"
lazy_static = "^1.4"
semver = "^1.0"